{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 478,
  "lineage": "f7cc28b8-2c38-e34d-2ecd-393d79b0ce5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:082154468366:internet-gateway/igw-0d90f60e878862605",
            "id": "igw-0d90f60e878862605",
            "owner_id": "082154468366",
            "tags": {
              "Name": "sock-shop-igw"
            },
            "tags_all": {
              "Name": "sock-shop-igw"
            },
            "vpc_id": "vpc-02826de47e63edc4a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:082154468366:route-table/rtb-0039fa959be41175e",
            "id": "rtb-0039fa959be41175e",
            "owner_id": "082154468366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d90f60e878862605",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sock-shop-public-route"
            },
            "tags_all": {
              "Name": "sock-shop-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-02826de47e63edc4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c74256ae2bdbfb84",
            "route_table_id": "rtb-0039fa959be41175e",
            "subnet_id": "subnet-047b252b9a330a0a8"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03637b1dd74d81f02",
            "route_table_id": "rtb-0039fa959be41175e",
            "subnet_id": "subnet-0965a4a959d580662"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:082154468366:security-group/sg-0ae4f87f2387c9b01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae4f87f2387c9b01",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07691c4144e30fad4"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07691c4144e30fad4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sock-shop-eks-control-plane-sg",
            "name_prefix": "",
            "owner_id": "082154468366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sock-shop-eks-control-plane-sg"
            },
            "tags_all": {
              "Name": "sock-shop-eks-control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02826de47e63edc4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_security_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:082154468366:security-group/sg-07691c4144e30fad4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07691c4144e30fad4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sock-shop-eks-sg",
            "name_prefix": "",
            "owner_id": "082154468366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sock-shop-eks-sg"
            },
            "tags_all": {
              "Name": "sock-shop-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02826de47e63edc4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:082154468366:subnet/subnet-047b252b9a330a0a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047b252b9a330a0a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082154468366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-public-subnet-1",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-public-subnet-1",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02826de47e63edc4a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:082154468366:subnet/subnet-0965a4a959d580662",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0965a4a959d580662",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "082154468366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sock-shop-public-subnet-2",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sock-shop-public-subnet-2",
              "kubernetes.io/cluster/sock-shop-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02826de47e63edc4a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:082154468366:vpc/vpc-02826de47e63edc4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e272c10bbe2b65a1",
            "default_route_table_id": "rtb-0ad8950bb3cfce3b2",
            "default_security_group_id": "sg-075a6c16fc18b46da",
            "dhcp_options_id": "dopt-07d64dd516073ddb3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02826de47e63edc4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad8950bb3cfce3b2",
            "owner_id": "082154468366",
            "tags": {
              "Name": "sock-shop-vpc"
            },
            "tags_all": {
              "Name": "sock-shop-vpc"
            }
          }
        }
      ]
    }
  ]
}